[gd_scene load_steps=7 format=2]

[ext_resource path="res://enviroments/bosque final-gigapixel-standard-height-770px.png" type="Texture" id=1]
[ext_resource path="res://scripts/level/level_game.gd" type="Script" id=2]
[ext_resource path="res://resource/bd/bd_quiz_game.tres" type="Resource" id=3]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.537255, 0.317647, 0.0509804, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.584314, 0.337255, 0.0392157, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.584314, 0.337255, 0.0392157, 1 )

[node name="level_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = 6.0
script = ExtResource( 2 )
bd_quiz = ExtResource( 3 )
color_right = Color( 0.168627, 0.886275, 0.262745, 1 )
color_wrong = Color( 0.901961, 0.0431373, 0.0431373, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = -3.0
margin_right = 452.0
margin_bottom = 701.0
rect_min_size = Vector2( 448, 704 )
texture = ExtResource( 1 )

[node name="question_info" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -190.0
margin_top = 155.0
margin_right = 198.0
margin_bottom = 290.0

[node name="txt_question" type="Label" parent="question_info"]
margin_top = 7.0
margin_right = 388.0
margin_bottom = 127.0
rect_min_size = Vector2( 370, 120 )
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 7 )
align = 1
valign = 1

[node name="question_holder" type="VBoxContainer" parent="."]
margin_left = 58.0
margin_top = 350.0
margin_right = 406.0
margin_bottom = 610.0
rect_min_size = Vector2( 0, 250 )
size_flags_vertical = 3
custom_constants/separation = 20

[node name="boton_opc_1" type="Button" parent="question_holder"]
margin_right = 348.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_styles/normal = SubResource( 3 )
action_mode = 0

[node name="boton_opc_2" type="Button" parent="question_holder"]
margin_top = 70.0
margin_right = 348.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 50 )
custom_constants/hseparation = 0
custom_styles/normal = SubResource( 4 )
action_mode = 0

[node name="boton_opc_3" type="Button" parent="question_holder"]
margin_top = 140.0
margin_right = 348.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 50 )
custom_constants/hseparation = 0
custom_styles/normal = SubResource( 4 )

[node name="boton_opc_4" type="Button" parent="question_holder"]
margin_top = 210.0
margin_right = 348.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 50 )
custom_constants/hseparation = 0
custom_styles/normal = SubResource( 4 )
